mobile dark mode fix

--- a/assets/stylesheet/core.css
+++ b/assets/stylesheet/core.css
@@ -26,22 +26,26 @@
 
 /* Dark theme
         --text: #dcdcdc;
-*/
+
 @media (prefers-color-scheme: dark) {
-  :root.dark {
-    color-scheme: dark;
-    --bg: #212121;
-    --accent-bg: #2b2b2b;
-    --text: white;
-    --text-light: #ababab;
-    --border: rgb(209, 142, 18);
-    --accent: #ffb300;
-    --code: #f06292;
-    --preformatted: #ccc;
-    --marked: #ffdd33;
-    --disabled: #111;
-  }
+*/
+:root.dark {
+  color-scheme: dark;
+  --bg: #212121;
+  --accent-bg: #2b2b2b;
+  --text: white;
+  --text-light: #ababab;
+  --border: rgb(209, 142, 18);
+  --accent: #ffb300;
+  --code: #f06292;
+  --preformatted: #ccc;
+  --marked: #ffdd33;
+  --disabled: #111;
 }
+
+/*
+}
+*/
 
 /* Add a bit of transparency so light media isn't so glaring in dark mode */
 img,
